SUMMARY A nice feature would be adding little indicators for the chapters in podcasts which support them. For example, in the podcast "The Economist: Full Edition", if you play the file you downloaded with mpv, mpv will label the various chapters of the podcast STEPS TO REPRODUCE 1. Open Kasts 2. Download the podcast The Economist: Full Edition 3. Navigate to the Kasts download folder 4. Play the file you just downloaded with mpv 5. Notice how mpv tags the various chapters of the podcast OBSERVED RESULT Kasts currently does not display chapters in podcasts EXPECTED RESULT Kasts should display chapters in podcasts
Chapters have been implemented on the master branch a few months ago. However, due to unforeseen circumstances, there haven't been any plasma mobile gear releases during the last few months. Plasma mobile gear 21.12 should be released end of this week. You could already test it now using the AUR kasts-git package. Feel free to re-open the ticket if the chapter marks still don't show up with that version (or the upcoming 21.12 when available).
The status of this ticket is RESOLVED FIXED. However, I'm using version 22.06 on Linux and I can't find episode chapters anywhere. Re-opening.
(In reply to Tiago from comment #2) > The status of this ticket is RESOLVED FIXED. However, I'm using version > 22.06 on Linux and I can't find episode chapters anywhere. Re-opening. Could you please elaborate? Do you have a certain episode of a certain podcast that you know should have chapters but which don't show in Kasts? We've implemented several chapter mark standards so far, but it could be that we're missing one. But we can't add it without examples.
For example, this podcast: https://peterattiadrive.libsyn.com/rss This podcast's chapters are shown in other podcast apps but I couldn't find them anywhere in Kasts.
(In reply to Tiago from comment #4) > For example, this podcast: https://peterattiadrive.libsyn.com/rss > This podcast's chapters are shown in other podcast apps but I couldn't find > them anywhere in Kasts. Ok, this is going to be tricky. That podcast doesn't actually have chapter marks implemented through any standard method: not in the rss xml feed nor in the media file metadata. The only reference to timestamps is in the description field, which is just a structured text field which is not intended to be parsed for information. (Or at least there's not standard to be able to parse it.) I see that AntennaPod makes the timestamps in the text clickable, but it doesn't actually expose them as proper chapters. That avoids the problem of trying to find the associated chapter title, which could be anything since "description" is a free form text field. I will see if I can do something similar in Kasts. But it will never end up as proper chapter marks because the data is simply not structured enough to properly extract it. (For an example of proper chapter marks see e.g. https://www.pine64.org/feed/mp3/ , which is supported by Kasts.)
Git commit cdec0533757240bdd92d270e2f0ea58db8ef99f9 by Bart De Vries. Committed on 24/01/2023 at 14:22. Pushed by bdevries into branch 'master'. Make timestamps in entry contents clickable, like chapter marks M +21 -0 src/entry.cpp M +13 -2 src/qml/Desktop/DesktopPlayerControls.qml M +17 -2 src/qml/EntryPage.qml https://invent.kde.org/plasma-mobile/kasts/commit/cdec0533757240bdd92d270e2f0ea58db8ef99f9