Make timestamps in entry contents clickable, like chapter marks

BUG: 446358